@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
left to right direction
'skinparam classAttributeIconSize 0
hide circle
hide methods
'---------File styling---------
skinparam class {
    BackgroundColor PeachPuff
    ArrowColor RoyalBlue
    BorderColor RoyalBlue
}
'------------|Actors|----------------
class "System Administrator" as SA{

}
class Agency{
    - id 
    - designation
    - phoneNumber
    - email
}
class Address{
    -street 
    -city 
    -state 
    -zipcode
}


'-------------------connections------------------
SA "1" -- "1..*" Agency : register >

Agency "1" -- "1" Address : has >
'--------------------heritage--------------------



@enduml